[metadata]
name = hupavddb
version = attr: hupavddb.__version__
description = Hospital Universitario Príncipe de Asturias Voice Disorders Database Reader
long_description_content_type = text/x-rst
long_description = file: README.rst
keywords = multimedia
license = GPL-2.0 License
url=https://github.com/tikuma-lsuhsc/python-hupavddb
project_urls=
    Issues=https://github.com/tikuma-lsuhsc/python-hupavddb/issues
    Pull Requests=https://github.com/tikuma-lsuhsc/python-hupavddb/pulls
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=hupavddb
install_requires =
    pandas
    translate
    xlrd
python_requires = >=3.6,
